--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="border rounded-lg p-4 text-white font-serif hover:scale-95 transition-all duration-200 hover:shadow-lg hover:shadow-slate-300">
                 <div class="flex flex-row gap-5 justify-center items-center">
                     <h2 class="text-center text-[20px] text-black font-bold">MODERN APARTMENT </h2>
-                    <a href=""><img src="./images/Github.svg" alt="" width="50px" height="30px" class="rounded-full "></a>
+                    <a href="https://apartment-eosin-nine.vercel.app/"><img src="./images/Github.svg" alt="" width="50px" height="30px" class="rounded-full "></a>
                 </div>
                 <p>Modern Apartment is to simplify the journey of searching your dream house
                     by providing a seamless, user-friendly platform where you can discover, explore
