--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="border rounded-lg p-4 text-white font-serif hover:scale-95 transition-all duration-200 hover:shadow-lg hover:shadow-slate-300">
                 <div class="flex flex-row gap-5 justify-center items-center">
                     <h2 class="text-center text-[20px] text-black font-bold">RAZORPAY</h2>
-                    <a href=""><img src="./images/Github.svg" alt="" width="50px" height="30px" class="rounded-full "></a>
+                    <a href="https://e-commerce-website-omega-one.vercel.app/"><img src="./images/Github.svg" alt="" width="50px" height="30px" class="rounded-full "></a>
                 </div>
                 <p>Razorpay is a prominent payment gateway in India,
                     offering various payment services. This clone aims to demonstrate the UI/UX of Razorpay 
