--- a/index.html
+++ b/index.html
@@ -95,6 +95,22 @@
                     inspiring success stories, and expert tips, you'll find everything you need to stay 
                     motivated and elevate your workouts.</p>
             </div>
+             <div class="border rounded-lg p-4 text-white font-serif hover:scale-95 transition-all duration-200 hover:shadow-lg hover:shadow-slate-300">
+                <div class="flex flex-row gap-5 justify-center items-center">
+                    <h2 class="text-center text-[20px] text-black font-bold">INTERNSHIP TASK 1</h2>
+                    <a href="https://1st-task-nine.vercel.app/">
+                      <img src="./images/Github.svg" alt="" width="50px" height="30px" class="rounded-full "></a>
+                </div>
+                <p>My 1st task as an front-end developer at Octanet services.It's a landing page of a website made with HTML,CSS-TAILWIND</p>
+            </div>
+            <div class="border rounded-lg p-4 text-white font-serif hover:scale-95 transition-all duration-200 hover:shadow-lg hover:shadow-slate-300">
+                <div class="flex flex-row gap-5 justify-center items-center">
+                    <h2 class="text-center text-[20px] text-black font-bold">INTERNSHIP TASK 2</h2>
+                    <a href="https://2nd-task.vercel.app/">
+                      <img src="./images/Github.svg" alt="" width="50px" height="30px" class="rounded-full "></a>
+                </div>
+                <p>My 2nd task as an front-end developer at Octanet services.It's a To-Do-List with various functionality like Add, Delete, Done, Undo. It is made with HTML,CSS & JS</p>
+            </div>
         </div>
 
     </section>
