--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
                 </div>
                 <p>My 2nd task as an front-end developer at Octanet services.It's a To-Do-List with various functionality like Add, Delete, Done, Undo. It is made with HTML,CSS & JS</p>
             </div>
+            <div class="border rounded-lg p-4 text-white font-serif hover:scale-95 transition-all duration-200 hover:shadow-lg hover:shadow-slate-300">
+                <div class="flex flex-row gap-5 justify-center items-center">
+                    <h2 class="text-center text-[20px] text-black font-bold">SCHOOL WEBSITE</h2>
+                    <a href="https://school-website-sable.vercel.app/">
+                      <img src="./images/Github.svg" alt="" width="50px" height="30px" class="rounded-full "></a>
+                </div>
+                <p>This is a school website made using reactJS . With proper information of school and also added some functionalities. </p>
+            </div>
         </div>
 
     </section>
