--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
         var typeData = new Typed(".role1", {
           strings: [
             "Front-End Developer",
-            "Web Developer",
+            "Back-End Developer",
+            "Mern Stack Developer",
             "Coder",
           ],
           loop: true,
