--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         <!-- content -->
         <div class="w-11/12 max-w-[800px] mx-auto  text-white ">
           <ol class="text-[28px] font-serif italic list-disc pt-10">
-            <li >I am well-versed in C++, HTML, CSS, JavaScript, Tailwind, and React. </li>
+            <li >I am well-versed in Java, C++, HTML, CSS, JavaScript, Tailwind and MERN STACK. </li>
             <li>I completed the 100 Days of coding challenge on Codechef, Leetcode, Hackerrank. </li>
-            <li>I have made many Front-End Web development projects and also keeping my focus
+            <li>I have made many Full stacks projects and also keeping my focus
             on Data Structure and Algorithms(DSA).</li>
             <li>I have completed numerous guided courses on Coding Ninjas, where I 
               gained certifications in various programming languages and technologies. 
